// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`JobStatusIndicator Snapshots matches snapshot for completed status 1`] = `
<div
  class="sc-bRKDuR eduBZj"
>
  <div
    class="sc-hvigdm lawWAh"
  >
    <span
      aria-label="check-circle"
      class="anticon anticon-check-circle"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="check-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
        />
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
        />
      </svg>
    </span>
  </div>
  <div
    class="sc-fhHczv inIEBn"
  >
    <span
      class="sc-ggWZvA cePQfb"
    >
      Completed
    </span>
    <span
      class="sc-dTvVRJ kigDDM"
    >
      <span
        aria-label="clock-circle"
        class="anticon anticon-clock-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="clock-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
          />
        </svg>
      </span>
      2h 15m
    </span>
    <div
      class="sc-hjsuWn gzjhYP"
    >
      Job completed successfully
    </div>
  </div>
</div>
`;

exports[`JobStatusIndicator Snapshots matches snapshot for failed status 1`] = `
<div
  class="sc-bRKDuR eduBZj"
>
  <div
    class="sc-hvigdm iqAqKK"
  >
    <span
      aria-label="close-circle"
      class="anticon anticon-close-circle"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="close-circle"
        fill="currentColor"
        fill-rule="evenodd"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm0 76c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zm128.01 198.83c.03 0 .05.01.09.06l45.02 45.01a.2.2 0 01.05.09.12.12 0 010 .07c0 .02-.01.04-.05.08L557.25 512l127.87 127.86a.27.27 0 01.05.06v.02a.12.12 0 010 .07c0 .03-.01.05-.05.09l-45.02 45.02a.2.2 0 01-.09.05.12.12 0 01-.07 0c-.02 0-.04-.01-.08-.05L512 557.25 384.14 685.12c-.04.04-.06.05-.08.05a.12.12 0 01-.07 0c-.03 0-.05-.01-.09-.05l-45.02-45.02a.2.2 0 01-.05-.09.12.12 0 010-.07c0-.02.01-.04.06-.08L466.75 512 338.88 384.14a.27.27 0 01-.05-.06l-.01-.02a.12.12 0 010-.07c0-.03.01-.05.05-.09l45.02-45.02a.2.2 0 01.09-.05.12.12 0 01.07 0c.02 0 .04.01.08.06L512 466.75l127.86-127.86c.04-.05.06-.06.08-.06a.12.12 0 01.07 0z"
        />
      </svg>
    </span>
  </div>
  <div
    class="sc-fhHczv inIEBn"
  >
    <span
      class="sc-ggWZvA hkMIps"
    >
      Failed
    </span>
    <span
      class="sc-dTvVRJ kigDDM"
    >
      <span
        aria-label="clock-circle"
        class="anticon anticon-clock-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="clock-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
          />
        </svg>
      </span>
      45m
    </span>
    <div
      class="sc-hjsuWn gzjhYP"
    >
      Job failed due to error
    </div>
  </div>
</div>
`;

exports[`JobStatusIndicator Snapshots matches snapshot for running status 1`] = `
<div
  class="sc-bRKDuR eduBZj"
>
  <div
    class="sc-hvigdm gIbVrg"
  >
    <span
      aria-label="loading"
      class="anticon anticon-loading anticon-spin"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="loading"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
        />
      </svg>
    </span>
  </div>
  <div
    class="sc-fhHczv inIEBn"
  >
    <span
      class="sc-ggWZvA gvNctY"
    >
      Running
    </span>
    <span
      class="sc-dTvVRJ kigDDM"
    >
      <span
        aria-label="clock-circle"
        class="anticon anticon-clock-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="clock-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
          />
        </svg>
      </span>
      1h 30m
    </span>
    <div
      class="sc-hjsuWn gzjhYP"
    >
      Processing simulation
    </div>
  </div>
  <div
    class="sc-jwTyAe bpUKjE"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="65"
      class="ant-progress ant-progress-status-normal ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-show-info ant-progress-default css-dev-only-do-not-override-5rmn7t"
      role="progressbar"
    >
      <div
        class="ant-progress-outer"
        style="width: 100%;"
      >
        <div
          class="ant-progress-inner"
        >
          <div
            class="ant-progress-bg ant-progress-bg-outer"
            style="width: 65%; height: 8px; --progress-line-stroke-color: var(--rescale-color-brand-blue); background: var(--rescale-color-brand-blue); --progress-percent: 0.65;"
          />
        </div>
        <span
          class="ant-progress-text ant-progress-text-end ant-progress-text-outer"
          title="65%"
        >
          65%
        </span>
      </div>
    </div>
  </div>
</div>
`;
